--- a/SQL Business Analysis.ipynb
+++ b/SQL Business Analysis.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"chinook-schema.svg\" />"
+   ]
   },
   {
    "cell_type": "markdown",
