added python project

--- a/Processing Crunchbase data in Chunks and Loading into SQLite.ipynb
+++ b/Processing Crunchbase data in Chunks and Loading into SQLite.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "## Processing Crunchbase data in Chunks and Loading into SQLite"
+    "## Processing Crunchbase Data in Chunks and Loading into SQLite"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "c_iter = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1')"
+    "chunks = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1')"
    ]
   },
   {
@@ -79,7 +79,7 @@
    ],
    "source": [
     "missing_value_list = []\n",
-    "for chunk in c_iter:\n",
+    "for chunk in chunks:\n",
     "    missing_value_list.append(chunk.isnull().sum())\n",
     "    \n",
     "combined_missing_value_counts = pd.concat(missing_value_list)\n",
@@ -133,10 +133,10 @@
     }
    ],
    "source": [
-    "c_iter = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1')\n",
+    "chunks = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1')\n",
     "counter = 0\n",
     "series_memory = pd.Series()\n",
-    "for chunk in c_iter:\n",
+    "for chunk in chunks:\n",
     "    if counter == 0:\n",
     "        series_memory = chunk.memory_usage(deep=True)\n",
     "    else:\n",
@@ -259,9 +259,9 @@
    "source": [
     "# Key: Column name, Value: Data types\n",
     "data_types = {}\n",
-    "c_iter = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1', usecols=use_cols)\n",
+    "chunks = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1', usecols=use_cols)\n",
     "\n",
-    "for chunk in c_iter:\n",
+    "for chunk in chunks:\n",
     "    for col in chunk.columns:\n",
     "        if col not in data_types:\n",
     "            data_types[col] = [str(chunk.dtypes[col])]\n",
@@ -491,9 +491,9 @@
    "source": [
     "import sqlite3\n",
     "conn = sqlite3.connect('crunchbase.db')\n",
-    "c_iter = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1')\n",
+    "chunks = pd.read_csv('crunchbase-investments.csv', chunksize=5000, encoding='ISO-8859-1')\n",
     "\n",
-    "for chunk in c_iter:\n",
+    "for chunk in chunks:\n",
     "    chunk.to_sql(\"investments\", conn, if_exists='append', index=False)"
    ]
   }
